maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:10: error: expected class or object definition
def trouverXBiscuit():Int=
^JediEscaper:29: error: expected class or object definition
def trouverYBiscuit():Int=
^JediEscaper:48: error: expected class or object definition
def numeroterLesCases(X:Int, Y:Int, cpt : Int)
^JediEscaper:49: error: expected class or object definition
{
^